--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
         </div> <!-- main-col end -->
 
      </div> <!-- End Certs -->
+	<!-- Work
+      ----------------------------------------------- -->
      <div class="row work">
 
         <div class="three columns header-col">
@@ -234,7 +236,7 @@
            <div class="row item">
 
               <div class="twelve columns">
-  <header>
+
     <h3>American Express | Eficens Systems Inc</h3>
     <p class="info"> Software DevOps Engineer  <span>&bull; </span> <em class="date"> Jan 2021 - Present</em> </p>
     <p>
