--- a/index.html
+++ b/index.html
@@ -494,6 +494,8 @@ development of applications and provided end-to-end technical solutions to appli
         </div> <!-- main-col end -->
 
      </div> <!-- End Certs -->
+<!-- Work
+      ----------------------------------------------- -->
      <div class="row work">
 
         <div class="three columns header-col">
