--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
           <h2>ABOUT ME</h2>
 
-          <p> Hi, I'm Pavani Panuganti, a Highly skilled and results-driven DevOps engineer with extensive 3 experience in designing, implementing, and managing cloud-based infrastructure solutions. Proficient in utilizing Azure and AWS services to optimize development processes, enhance scalability, and streamline continuous integration and delivery. Adept at collaborating with cross-functional teams to ensure
+          <p> Hi, I'm Pavani Panuganti, a Highly skilled and results-driven Salesforce DevOps engineer with extensive 4 years of experience in designing, implementing, and managing cloud-based infrastructure solutions. Proficient in utilizing Salesforce, AWS and Azure services to optimize development processes, enhance scalability, and streamline continuous integration and delivery. Adept at collaborating with cross-functional teams to ensure
 seamless integration between development, operations, and quality assurance. Strong background in automation, configuration management, and deployment strategies to drive efficiency and reliability. Demonstrated expertise in leveraging DevOps bestpractices to facilitate agile development methodologies and deliver high-quality software solutions.
        </br>
     </br>
@@ -110,7 +110,7 @@ seamless integration between development, operations, and quality assurance. Str
 
             <div class="twelve columns">
 
-              <h3> Scripting Language (Python, Bash/Shell scripting) </h3>
+              <h3> Scripting Language (Python, Bash/Shell scripting, Apex programming) </h3>
                <!-- <p class="info"><em class="date">March 2023</em></p> -->
 
             </div>
@@ -144,7 +144,7 @@ seamless integration between development, operations, and quality assurance. Str
 
             <div class="twelve columns">
 
-               <h3>Others (Amazon Web Services (AWS), Microsoft Azure, JIRA, Linux, Ansible, Nagios, Maven, GitHub, Docker, Kubernetes, Docker
+               <h3>Others (Amazon Web Services (AWS), Salesforce.com, Salesforce Sales cloud, Microsoft Azure, JIRA, Linux, Ansible, Nagios, Maven, GitHub, Docker, Kubernetes, Docker
 Swarm, Nexus, ELK, Grafana, Prometheus)
             </h3>
                <!-- <p class="info"><em class="date">February 2021</em></p> -->
@@ -209,8 +209,6 @@ Swarm, Nexus, ELK, Grafana, Prometheus)
               </div>
 
            </div> <!-- item end -->
-           
-           
 
            <div class="row item">
 
@@ -332,8 +330,10 @@ improvement in application performance during high-demand periods.</li>
       </div>
 
 </div>
-
-
+<div class="section">
+<h3>Website</h3>
+<p><strong>https://www.salesforce.com/trailblazer/ppanu3</strong></p>
+</div>
 </section> <!-- Resume Section End-->
 
 
