--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
           <h2>ABOUT ME</h2>
 
-          <p> Hi, I'm Pavani Panuganti, a Highly skilled and results-driven Salesforce DevOps engineer with extensive 4 years of experience in designing, implementing, and managing cloud-based infrastructure solutions. Proficient in utilizing Salesforce, AWS and Azure services to optimize development processes, enhance scalability, and streamline continuous integration and delivery. Adept at collaborating with cross-functional teams to ensure
+          <p> Hi, I'm Pavani Panuganti, a Highly skilled and results-driven Salesforce DevOps consultant with extensive 4 years of experience in designing, implementing, and managing cloud-based infrastructure solutions. Proficient in utilizing Salesforce, AWS and Azure services to optimize development processes, enhance scalability, and streamline continuous integration and delivery. Adept at collaborating with cross-functional teams to ensure
 seamless integration between development, operations, and quality assurance. Strong background in automation, configuration management, and deployment strategies to drive efficiency and reliability. Demonstrated expertise in leveraging DevOps bestpractices to facilitate agile development methodologies and deliver high-quality software solutions.
        </br>
     </br>
@@ -232,8 +232,13 @@ Swarm, Nexus, ELK, Grafana, Prometheus)
               <div class="twelve columns">
  
     <h3>American Express | Eficens Systems Inc</h3>
-    <p class="info"> DevOps Consultant  <span>&bull; </span> <em class="date"> Jan 2021 - Present</em></p>
+    <p class="info"> Salesforce DevOps Consultant  <span>&bull; </span> <em class="date"> Jan 2021 - Present</em></p>
     <p>
+<li>Proficient in analyzing and resolving Salesforce-related incidents and issues, providing timely solutions and collaborating with cross-functional teams to maintain a stable Salesforce environment.</li>
+<li>Integrated Salesforce with email systems for seamless communication, enabling sales representatives to engage with prospects and clients more effectively.</li>
+<li>Customized Salesforce Sales Cloud to align with the sales team's unique requirements, including custom fields, objects, and workflow automation.</li>
+<li>Enabled seamless integration of Salesforce with third-party tools, optimizing data exchange and process automation, and delivering a unified view of customer information.</li>
+<li>Implemented data quality initiatives within Salesforce to maintain accurate and consistent data, reducing data discrepancies and enhancing reporting accuracy.</li>
 <li>Chose AWS CloudFormation and ARM templates for infrastructure provisioning due to their declarative approach, enabling
 consistent and automated infrastructure deployment across both AWS and Azure.</li>
 <li>Leveraged the templates' version control capabilities, simplifying infrastructure management and promoting collaboration
@@ -244,11 +249,7 @@ making it lightweight and easily scalable.</li>
 configuration management for the multi-cloud environment.</li>
 <li>Utilized AWS CloudWatch for monitoring AWS resources, Azure Monitor for Azure resources, and ELK Stack for log
 aggregation, analysis, and visualization</li>
-<li>Proficient in analyzing and resolving Salesforce-related incidents and issues, providing timely solutions and collaborating with cross-functional teams to maintain a stable Salesforce environment.</li>
-<li>Integrated Salesforce with email systems for seamless communication, enabling sales representatives to engage with prospects and clients more effectively.</li>
-<li>Customized Salesforce Sales Cloud to align with the sales team's unique requirements, including custom fields, objects, and workflow automation.</li>
-<li>Enabled seamless integration of Salesforce with third-party tools, optimizing data exchange and process automation, and delivering a unified view of customer information.</li>
-<li>Implemented data quality initiatives within Salesforce to maintain accurate and consistent data, reducing data discrepancies and enhancing reporting accuracy.</li>
+
 </div>
 
 </div> <!-- item end -->
@@ -259,8 +260,6 @@ aggregation, analysis, and visualization</li>
        <h3>Bened Software Solutions Inc </h3>
       <p><strong></strong>Salesforce DevOps Consultant <span>&bull;</span> <em class="date">Aug 2021 - Dec 2021</em></p>
     
-<li>Designed and architected a scalable and reliable infrastructure using DevOps technologies such as Jenkins, Docker, and
-Kubernetes,resulting in a 30% improvement in application deployment efficiency and a 20% reduction in infrastructure costs.</li>
 <li>Integrated third-party applications from Salesforce AppExchange to enhance the functionality and capabilities of Salesforce Sales Cloud.</li>
 <li>Regularly updated and maintained the Salesforce platform, ensuring that it stays current with the latest features and security updates.</li>
 <li>Implemented Git-based source code management using tools like GitFlow or GitHub Flow, facilitating seamless collaboration
@@ -271,6 +270,8 @@ among a team of 15 developers, ensuring version control for over 5,000 code comm
 <li>Enabled seamless integration of Salesforce with third-party tools, optimizing data exchange and process automation, and delivering a unified view of customer information.</li>
 <li>Configured and automated CI processes using Jenkins, reducing build and test cycle times by 40% and enabling the integration
 of code changes from multiple developers on a daily basis.</li>
+<li>Designed and architected a scalable and reliable infrastructure using DevOps technologies such as Jenkins, Docker, and
+Kubernetes,resulting in a 30% improvement in application deployment efficiency and a 20% reduction in infrastructure costs.</li>
 <li>Utilized Docker to containerize the application, leading to a 30% reduction in deployment time and improved consistency
 across development, testing, and production environments.</li>
 <li>Leveraged Kubernetes for container orchestration, enabling seamless scaling and load balancing, which resulted in a 25%
@@ -330,9 +331,16 @@ improvement in application performance during high-demand periods.</li>
       </div>
 
 </div>
+	<div class="row item">
+    <div class="nine columns main-col">
+        <div class="twelve columns">
+
 <div class="section">
 <h3>Website</h3>
 <p><strong>https://www.salesforce.com/trailblazer/ppanu3</strong></p>
+</div>
+</div>
+</div>
 </div>
 </section> <!-- Resume Section End-->
 
