--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
           <h2>ABOUT ME</h2>
 
-          <p> Hi, I'm Pavani Panuganti, a Highly skilled and results-driven Salesforce DevOps consultant with extensive 4 years of experience in designing, implementing, and managing cloud-based infrastructure solutions. Proficient in utilizing Salesforce, AWS and Azure services to optimize development processes, enhance scalability, and streamline continuous integration and delivery. Adept at collaborating with cross-functional teams to ensure
+          <p> Hi, I'm Pavani Panuganti, a Highly skilled and results-driven Salesforce consultant with extensive 4 years of experience in designing, implementing, and managing cloud-based infrastructure solutions. Proficient in utilizing Salesforce, AWS and Azure services to optimize development processes, enhance scalability, and streamline continuous integration and delivery. Adept at collaborating with cross-functional teams to ensure
 seamless integration between development, operations, and quality assurance. Strong background in automation, configuration management, and deployment strategies to drive efficiency and reliability. Demonstrated expertise in leveraging DevOps bestpractices to facilitate agile development methodologies and deliver high-quality software solutions.
        </br>
     </br>
@@ -121,7 +121,7 @@ seamless integration between development, operations, and quality assurance. Str
 
             <div class="twelve columns">
 
-               <h3>Application Servers and tools (Apache Tomcat, SonarQube)
+               <h3> Tools:VS Code, Data Loader, Import wizard
             </h3>
                <!-- <p class="info"><em class="date">July 2020</em></p> -->
 
@@ -139,14 +139,26 @@ seamless integration between development, operations, and quality assurance. Str
             </div>
 
          </div> <!-- item end -->
+	      <div class="row item">
+
+            <div class="twelve columns">
+
+               <h3>Salesforce technologies: Custom Objects, Roles and Profiles, Screen Flows, Flow Triggers, Process Builder, Workflows, Assignment Rules, SOQL, SOSL, Approval process, Triggers, Record Type, Dashboard, Security, Custom Field, reports, Apex Classes/Controllers, Apex Trigger, Lightning Experience, Lightning Pages, Experience cloud, Sales cloud.
+
+            </h3>
+               <!-- <p class="info"><em class="date">July 2020</em></p> -->
+
+            </div>
+
+         </div> <!-- item end -->
 
          <div class="row item">
 
             <div class="twelve columns">
 
-               <h3>Others (Amazon Web Services (AWS), Salesforce.com, Salesforce Sales cloud, Microsoft Azure, JIRA, Linux, Ansible, Nagios, Maven, GitHub, Docker, Kubernetes, Docker
-Swarm, Nexus, ELK, Grafana, Prometheus)
-            </h3>
+               <h4>Others (Amazon Web Services (AWS), Salesforce.com, Salesforce Sales cloud, Microsoft Azure, JIRA, Linux, Nagios, Maven, GitHub, Docker, Kubernetes, 
+ Nexus, ELK, Grafana, Prometheus)
+            </h4>
                <!-- <p class="info"><em class="date">February 2021</em></p> -->
 
             </div>
