--- a/index.html
+++ b/index.html
@@ -189,16 +189,7 @@ seamless integration between development, operations, and quality assurance. Str
 
            </div> <!-- item end -->
 
-           <div class="row item">
-
-              <div class="twelve columns">
-
-                 <h3>AWS Certified Cloud Practitioner</h3>
-                 <p class="info"><em class="date">Apr 2023- Apr 2026</em></p>
-
-              </div>
-
-           </div> <!-- item end -->
+           
 
            <div class="row item">
 
@@ -217,6 +208,16 @@ seamless integration between development, operations, and quality assurance. Str
 
                  <h3>Salesforce Certified Platform Developer 1</h3>
                  <p class="info"><em class="date">Aug 2020- Dec 2021</em></p>
+
+              </div>
+
+           </div> <!-- item end -->
+		<div class="row item">
+
+              <div class="twelve columns">
+
+                 <h3>AWS Certified Cloud Practitioner</h3>
+                 <p class="info"><em class="date">Apr 2023- Apr 2026</em></p>
 
               </div>
 
@@ -244,7 +245,7 @@ seamless integration between development, operations, and quality assurance. Str
               <div class="twelve columns">
  
     <h3>American Express | Eficens Systems Inc</h3>
-    <p class="info"> Salesforce DevOps Consultant  <span>&bull; </span> <em class="date"> Jan 2021 - Present</em></p>
+    <p class="info"> Salesforce Consultant + DevOps <span>&bull; </span> <em class="date"> Jan 2021 - Present</em></p>
     <p>
 <li>Proficient in analyzing and resolving Salesforce-related incidents and issues, providing timely solutions and collaborating with cross-functional teams to maintain a stable Salesforce environment.</li>
 <li>Integrated Salesforce with email systems for seamless communication, enabling sales representatives to engage with prospects and clients more effectively.</li>
@@ -270,7 +271,7 @@ aggregation, analysis, and visualization</li>
     <div class="twelve columns">
 
        <h3>Bened Software Solutions Inc </h3>
-      <p><strong></strong>Salesforce DevOps Consultant <span>&bull;</span> <em class="date">Aug 2021 - Dec 2021</em></p>
+      <p><strong></strong>Salesforce Consultant <span>&bull;</span> <em class="date">Aug 2021 - Dec 2021</em></p>
     
 <li>Integrated third-party applications from Salesforce AppExchange to enhance the functionality and capabilities of Salesforce Sales Cloud.</li>
 <li>Regularly updated and maintained the Salesforce platform, ensuring that it stays current with the latest features and security updates.</li>
@@ -286,8 +287,7 @@ of code changes from multiple developers on a daily basis.</li>
 Kubernetes,resulting in a 30% improvement in application deployment efficiency and a 20% reduction in infrastructure costs.</li>
 <li>Utilized Docker to containerize the application, leading to a 30% reduction in deployment time and improved consistency
 across development, testing, and production environments.</li>
-<li>Leveraged Kubernetes for container orchestration, enabling seamless scaling and load balancing, which resulted in a 25%
-improvement in application performance during high-demand periods.</li>
+
 </div>
 
 </div> <!-- item end -->
